# school-projects

./: .gitignore.txt  README.md
COM-490 large-scale data science for real-world data/: README.md  delay_model.py  main.ipynb  preprocessing.ipynb
ENG-209 data science for engineers/: README.md  info.md
ENG-209 data science pour ingenieurs/: info.md
MATH-458 programming concepts in scientific computing/: README.md  info.md
MATH-458 programming concepts in scientific computing/project/: CMakeLists.txt  Makefile  Newton.cc  Newton.hh  adams_bashforth.cc  adams_bashforth.hh  adams_bashforth_1.cc  adams_bashforth_1.hh  adams_bashforth_2.cc  adams_bashforth_2.hh  adams_bashforth_3.cc  adams_bashforth_3.hh  adams_bashforth_4.cc  adams_bashforth_4.hh  adams_moulton.cc  adams_moulton.hh  adams_moulton_1.cc  adams_moulton_1.hh  adams_moulton_2.cc  adams_moulton_2.hh  adams_moulton_3.cc  adams_moulton_3.hh  adams_moulton_4.cc  adams_moulton_4.hh  backward_differentiation.cc  backward_differentiation.hh  backward_differentiation_1.cc  backward_differentiation_1.hh  backward_differentiation_2.cc  backward_differentiation_2.hh  backward_differentiation_3.cc  backward_differentiation_3.hh  backward_differentiation_4.cc  backward_differentiation_4.hh  data_in.cc  data_in.hh  data_out.cc  data_out.hh  explicit_integrator.cc  explicit_integrator.hh  (+34 more)
MATH-463 mathematical modelling of behavior/: README.md  assignment MMB.ipynb  biogeme.toml  info.md
MGT-483 optimal decision making/: 100x100_markings.npy  README.md  equality_test.py  matching_matrix_bland.npy  run_coin_game.py  (+2 more)
(+42 files in other folders)
